# particles-montecarlo

./: .gitignore  LICENSE  README.md
cpp/: CMakeLists.txt  compute_boundary.cc  compute_boundary.hh  compute_evaporation.cc  compute_evaporation.hh  compute_temperature.cc  compute_temperature.hh  constants.hh  droplet.cc  droplet.hh  droplets_factory.cc  droplets_factory.hh  fft.hh  main.cc  material_point.cc  material_point.hh  material_points_factory.cc  matrix.hh  particles_factory_interface.cc  system.hh  system_evolution.hh  test_boundary.cc  test_fft.cc  test_heat.cc
cpp/tests/: CMakeLists.txt  test_boundary.cc
python/: README.md  code_with_boundary_v2.py  particles.py
